--- a/Leadings_Causes_of_Death.Rmd
+++ b/Leadings_Causes_of_Death.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Leading Causes of Death"
+title: "Leading Causes of Death in the U.S."
 author: "Tanner Gildea"
 date: "7/17/2019"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE )
 
 library(tidyverse)
 library(readxl)
@@ -32,7 +32,7 @@ trends_top_two <- NCHS %>%
   na.omit() %>% 
   filter(Cause.Name == "Cancer" | Cause.Name == "Heart disease")
 
-ggplot(trends, aes(x = Year,
+ggplot(trends_top_two, aes(x = Year,
                    y = Deaths, 
                    color = Cause.Name,
                    fill = Cause.Name)) +
@@ -166,6 +166,9 @@ ggplot(death_rate, aes(x = Year,
 
   scale_fill_discrete(name = "Cause of Death") +
   scale_color_discrete(name = "Cause of Death") +
+  
+  scale_color_brewer(palette = "Paired") +
+  scale_fill_brewer(palette = "Paired") +
 
   labs(x = NULL, y = "Mean Age-adjusted Death Rate",
        title = "Death Rates for Other Top Killers",
@@ -184,10 +187,7 @@ ggplot(death_rate, aes(x = Year,
 
 ```
 
-
-
-```{r map_top_killers}
-
+```{r map_data_prep}
 # Map with shading according to number 1 killer in past 5 years
 us_states <- map_data("state")
 
@@ -196,9 +196,46 @@ NCHS_states$region <- tolower(NCHS_states$State)
 
 NCHS_states_joined <- left_join(us_states, NCHS_states)
 
+```
+
+```{r map_heart_disease}
+
+heart_disease <- NCHS_states_joined %>% 
+  filter(Cause.Name == "Heart disease") %>% 
+  filter(Year %in% c(2014,2015,2016))
+
+ggplot(data = heart_disease, aes(x = long,
+                             y = lat,
+                             group = group,
+                             fill = Age.adjusted.Death.Rate)) +
+  
+  facet_wrap(~Year) +
+
+  geom_polygon(color = "grey90", size = .1) +
+
+  coord_map(projection = "albers", lat0 = 39, lat1 = 45) +   # curves map to annoy flat-earthers
+  
+  labs(x = NULL, y = NULL,
+       title = "Heart Disease Death Rates By State",
+       subtitle = NULL,
+       caption = "Source: Center for Disease Control and Prevention",
+       fill = "Death rate per 100,000 persons") +
+  
+  scale_fill_viridis_c(option = "inferno") +
+  
+  theme_map() +
+  
+  theme(plot.title = element_text(size = rel(1.5), face ="bold"),
+        plot.caption = element_text(face="italic"),
+        legend.position = "bottom",
+        strip.background = element_blank())
+```
+
+```{r map_suicide}
+
 suicide <- NCHS_states_joined %>% 
   filter(Cause.Name == "Suicide") %>% 
-  filter(Year == c(2014,2015,2016))
+  filter(Year %in% c(2014,2015,2016))
 
 ggplot(data = suicide, aes(x = long,
                              y = lat,
@@ -212,30 +249,89 @@ ggplot(data = suicide, aes(x = long,
   coord_map(projection = "albers", lat0 = 39, lat1 = 45) +   # curves map to annoy flat-earthers
   
   labs(x = NULL, y = NULL,
-       title = "Title",
-       subtitle = "Sub",
-       caption = "Source: Center for Disease Control and Prevention") +
+       title = "Suicide Death Rates By State",
+       subtitle = NULL,
+       caption = "Source: Center for Disease Control and Prevention",
+       fill = "Death rate per 100,000 persons") +
   
   scale_fill_viridis_c(option = "cividis") +
   
-  theme_map()
-
-
-
-```
-
-```{r map_suicide}
-
+  theme_map() +
+  
+  theme(plot.title = element_text(size = rel(1.5), face ="bold"),
+        plot.caption = element_text(face="italic"),
+        legend.position = "bottom",
+        strip.background = element_blank())
 
 ```
+
 
 ```{r map_influenza}
+influenza <- NCHS_states_joined %>% 
+  filter(Cause.Name == "Influenza and pneumonia") %>% 
+  filter(Year %in% c(2014,2015,2016))
 
+ggplot(data = influenza, aes(x = long,
+                             y = lat,
+                             group = group,
+                             fill = Age.adjusted.Death.Rate)) +
+  
+  facet_wrap(~Year) +
+
+  geom_polygon(color = "grey90", size = .1) +
+
+  coord_map(projection = "albers", lat0 = 39, lat1 = 45) +   # curves map to annoy flat-earthers
+  
+  labs(x = NULL, y = NULL,
+       title = "Influenza and Pneumonia Death Rates By State",
+       subtitle = NULL,
+       caption = "Source: Center for Disease Control and Prevention",
+       fill = "Death rate per 100,000 persons") +
+  
+  scale_fill_viridis_c(option = "viridis") +
+  
+  theme_map() +
+  
+  theme(plot.title = element_text(size = rel(1.5), face ="bold"),
+        plot.caption = element_text(face="italic"),
+        legend.position = "bottom",
+        strip.background = element_blank())
 
 ```
 
 ```{r map_unintentional}
+unintentional <- NCHS_states_joined %>% 
+  filter(Cause.Name == "Unintentional injuries") %>% 
+  filter(Year %in% c(2014,2015,2016))
 
+ggplot(data = unintentional, aes(x = long,
+                             y = lat,
+                             group = group,
+                             fill = Age.adjusted.Death.Rate)) +
+  
+  facet_wrap(~Year) +
+
+  geom_polygon(color = "grey90", size = .1) +
+
+  coord_map(projection = "albers", lat0 = 39, lat1 = 45) +   # curves map to annoy flat-earthers
+  
+  labs(x = NULL, y = NULL,
+       title = "Suicide Death Rates By State",
+       subtitle = NULL,
+       caption = "Source: Center for Disease Control and Prevention",
+       fill = "Death rate per 100,000 persons") +
+  
+  scale_fill_viridis_c(option = "plasma") +
+  
+  theme_map() +
+  
+  theme(plot.title = element_text(size = rel(1.5), face ="bold"),
+        plot.caption = element_text(face="italic"),
+        legend.position = "bottom",
+        strip.background = element_blank())
 
 ```
+
+
+
 
